--- a/src/components/counter/counter.module.css
+++ b/src/components/counter/counter.module.css
@@ -2,5 +2,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 400px;
+    padding: 40px;
+    margin-top: 400px;
+    border: 5px solid black;
+    background-color: coral;
+}
+
+.value {
+    color: black;
+}
+
+.maxValue {
+    color: red;
 }
