--- a/src/components/counter/counter.module.css
+++ b/src/components/counter/counter.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px;
-    margin-top: 400px;
+    padding: 100px;
+    margin: 300px 700px 400px 700px;
     border: 5px solid black;
     background-color: coral;
 }
