--- a/src/components/counter/counter.module.css
+++ b/src/components/counter/counter.module.css
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 100px;
-    margin: 300px 700px 400px 700px;
+    padding: 50px;
+    margin: 300px 700px 300px 700px;
     border: 5px solid black;
+    border-radius: 15px;
     background-color: coral;
 }
 
