--- a/src/components/settings/settings.module.css
+++ b/src/components/settings/settings.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 50px 90px 50px;
+    padding: 50px 50px 60px 50px;
     margin: 300px 700px 300px 700px;
     border: 5px solid black;
     border-radius: 15px;
@@ -17,4 +17,9 @@
 .startValue {
     font-size: large;
     font-weight: bold;
+}
+
+.button {
+    margin-top: 30px;
+    padding: 5px 30px;
 }
